--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -208,10 +208,10 @@
 }
 
 .st1 {
-    @apply stroke-slate-600 fill-white dark:stroke-slate-400 dark:fill-slate-800;
+    @apply stroke-slate-600 fill-white dark:stroke-slate-700 dark:fill-slate-500;
 
     &:hover {
-        @apply fill-slate-400;
+        @apply fill-slate-400 !important;
         cursor: pointer;
     }
 }
