--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,4 +6,6 @@
 @import 'slider';
 @import 'base';
 @import 'tippy.js/dist/tippy.css';
-@import 'crm-tippy.css'
+@import 'crm-tippy.css';
+@import 'buttons';
+@import 'form'
