--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -181,6 +181,16 @@
     }
 }
 
+.marquee {
+    overflow: hidden;
+    white-space: nowrap; /* Запрещаем переносы слов */
+    animation: marquee 6s linear infinite alternate;
+}
+@keyframes marquee {
+    from { text-indent: 30%; }
+    to { text-indent: -180%; }
+}
+
 .app-sidebar-link {
     margin: 16px 0;
     transition: 0.2s;
@@ -190,11 +200,14 @@
     height: 40px;
     padding-left: 1rem;
     display: flex;
+    align-items: center;
     justify-content: center;
     font-size: 22px;
     line-height: 0;
     @apply text-slate-800 dark:text-slate-100 items-center;
-
+    i {
+        height: 22px;
+    }
     &.active:not(span){
         @apply bg-slate-800 text-slate-100 dark:text-slate-800 dark:bg-slate-100;
         span {
