Map, permission, settings

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,4 +8,5 @@
 @import 'tippy.js/dist/tippy.css';
 @import 'crm-tippy.css';
 @import 'buttons';
-@import 'form'
+@import 'form';
+@import 'select';
