--- a/resources/css/form.css
+++ b/resources/css/form.css
@@ -8,7 +8,7 @@
   @apply text-slate-600 dark:text-slate-200 bg-white dark:bg-slate-700 border-slate-300 dark:border-slate-600 focus:border-slate-300 focus:ring focus:ring-transparent rounded-md shadow-sm w-full;
 
   &::placeholder {
-    @apply text-gray-600 opacity-100;
+    @apply text-slate-400 opacity-100;
   }
 }
 
