--- a/resources/css/buttons.css
+++ b/resources/css/buttons.css
@@ -16,6 +16,9 @@
 .btn-slate {
     @apply bg-slate-600 text-white p-2 px-4 rounded-xl text-center hover:bg-slate-700 cursor-pointer;
 }
+.btn-blue {
+    @apply bg-sky-400 text-white p-2 px-4 rounded-xl text-center hover:bg-sky-600 cursor-pointer;
+}
 
 .btn-spinner,
 .btn-spinner:after {
