--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -198,7 +198,7 @@
     flex-shrink: 0;
     width: 40px;
     height: 40px;
-    padding-left: 1rem;
+    padding-left: 1.8rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -215,8 +215,8 @@
         }
     }
     span {
-        padding-left: 1rem;
-        font-size: 16px;
+        padding-left: 1.8rem;
+        font-size: 14px;
         @apply w-0 inline-block overflow-x-hidden uppercase;
 
     }
@@ -227,7 +227,8 @@
 }
 
 .menu-side-open {
-    width: 220px;
+    width: 180px;
+    position: relative;
     @media (max-width: 640px) {
         top: 0;
         left: 0;
