--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4413,6 +4413,9 @@ padding-right: 1.5rem;
 .pb-8{
 padding-bottom: 2rem;
 }
+.pb-3{
+padding-bottom: 0.75rem;
+}
 .text-left{
 text-align: left;
 }
