--- a/resources/css/buttons.css
+++ b/resources/css/buttons.css
@@ -1,33 +1,37 @@
+[class*="btn-"] {
+    @apply px-4 py-2 border border-transparent rounded-md text-xs uppercase tracking-widest focus:outline-none disabled:opacity-50 disabled:cursor-not-allowed transition cursor-pointer text-center;
+}
+
 .btn-yellow {
-    @apply px-6 py-3 rounded bg-yellow-400 text-black text-sm leading-4 font-bold whitespace-nowrap hover:bg-orange-400 focus:bg-orange-400 cursor-pointer;
+    @apply bg-yellow-400 text-black text-sm leading-4 font-bold whitespace-nowrap hover:bg-orange-400 focus:bg-orange-400;
 }
 .btn-red {
-    @apply px-6 py-3 rounded bg-red-500 text-white text-sm leading-4 font-bold whitespace-nowrap hover:bg-red-700 focus:bg-red-700 cursor-pointer;
+    @apply bg-red-500 text-white text-sm leading-4 font-bold whitespace-nowrap hover:bg-red-700 focus:bg-red-700 ;
 }
 .btn-green {
-    @apply bg-emerald-400 dark:bg-emerald-600 text-white p-2 px-4 rounded-xl text-center hover:bg-emerald-500 dark:hover:bg-emerald-700 cursor-pointer;
+    @apply bg-emerald-400 dark:bg-emerald-600 text-white hover:bg-emerald-500 dark:hover:bg-emerald-700;
 }
 .btn-default {
-    @apply bg-slate-400 dark:bg-slate-600 text-white p-2 px-4 rounded-xl text-center hover:bg-slate-500 dark:hover:bg-slate-700 cursor-pointer;
+    @apply bg-slate-400 dark:bg-slate-600 text-white hover:bg-slate-500 dark:hover:bg-slate-700 ;
 }
 .btn-purple {
-    @apply bg-indigo-600 text-white p-2 px-4 rounded-xl text-center hover:bg-indigo-700 cursor-pointer;
+    @apply bg-indigo-600 text-white hover:bg-indigo-700;
 }
 .btn-slate {
-    @apply bg-slate-600 text-white p-2 px-4 rounded-xl text-center hover:bg-slate-700 cursor-pointer;
+    @apply bg-slate-600 text-white hover:bg-slate-700;
 }
 .btn-blue {
-    @apply bg-sky-400 text-white p-2 px-4 rounded-xl text-center hover:bg-sky-600 cursor-pointer;
+    @apply bg-sky-400 text-white hover:bg-sky-600;
 }
 
-.btn-spinner,
-.btn-spinner:after {
+.button-spinner,
+.button-spinner:after {
   border-radius: 50%;
-  width: 1.5em;
-  height: 1.5em;
+  width: 16px;
+  height: 16px;
 }
 
-.btn-spinner {
+.button-spinner {
   font-size: 10px;
   position: relative;
   text-indent: -9999em;
