--- a/resources/css/select.css
+++ b/resources/css/select.css
@@ -328,6 +328,9 @@
 	width: 8px;
 	height: 8px
 }
+.error .vue-treeselect__control {
+    @apply border-red-600;
+}
 .vue-treeselect__control-arrow-container {
 	display: table-cell;
 	vertical-align: middle;
