--- a/resources/css/buttons.css
+++ b/resources/css/buttons.css
@@ -12,7 +12,7 @@
     @apply bg-emerald-400 dark:bg-emerald-600 text-white hover:bg-emerald-500 dark:hover:bg-emerald-700;
 }
 .btn-default {
-    @apply bg-slate-400 dark:bg-slate-600 text-white hover:bg-slate-500 dark:hover:bg-slate-700 ;
+    @apply bg-slate-300 text-slate-700 hover:bg-slate-400 dark:bg-slate-600/50 dark:hover:bg-slate-600/75 dark:text-slate-300;
 }
 .btn-purple {
     @apply bg-indigo-600 text-white hover:bg-indigo-700;
@@ -21,7 +21,7 @@
     @apply bg-slate-600 text-white hover:bg-slate-700;
 }
 .btn-blue {
-    @apply bg-sky-400 text-white hover:bg-sky-600;
+    @apply bg-slablu-700 text-white hover:bg-slablu-800;
 }
 
 .button-spinner,
