--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3479,6 +3479,27 @@ right: 0.5rem;
 .bottom-1{
 bottom: 0.25rem;
 }
+.-left-2{
+left: -0.5rem;
+}
+.-bottom-2{
+bottom: -0.5rem;
+}
+.left-2{
+left: 0.5rem;
+}
+.-bottom-4{
+bottom: -1rem;
+}
+.left-4{
+left: 1rem;
+}
+.-bottom-3{
+bottom: -0.75rem;
+}
+.-bottom-3\.5{
+bottom: -0.875rem;
+}
 .-z-10{
 z-index: -10;
 }
@@ -3683,6 +3704,12 @@ margin-right: -1.5rem;
 }
 .-mb-8{
 margin-bottom: -2rem;
+}
+.ml-8{
+margin-left: 2rem;
+}
+.ml-10{
+margin-left: 2.5rem;
 }
 .block{
 display: block;
@@ -3993,6 +4020,9 @@ grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .grid-cols-5{
 grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+.grid-cols-3{
+grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 .flex-col{
 flex-direction: column;
@@ -4669,6 +4699,10 @@ line-height: 1;
 font-size: 3.75rem;
 line-height: 1;
 }
+.text-7xl{
+font-size: 4.5rem;
+line-height: 1;
+}
 .font-bold{
 font-weight: 700;
 }
@@ -4911,6 +4945,18 @@ color: rgb(248 113 113 / var(--tw-text-opacity));
 .text-red-500{
 --tw-text-opacity: 1;
 color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+.text-indigo-400\/30{
+color: rgb(129 140 248 / 0.3);
+}
+.text-indigo-600\/30{
+color: rgb(79 70 229 / 0.3);
+}
+.text-indigo-800\/30{
+color: rgb(55 48 163 / 0.3);
+}
+.text-indigo-400\/90{
+color: rgb(129 140 248 / 0.9);
 }
 .underline{
 -webkit-text-decoration-line: underline;
@@ -7015,6 +7061,17 @@ background-color: rgb(203 213 225 / 0.8);
 --tw-bg-opacity: 1;
 background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
+.hover\:bg-indigo-200:hover{
+--tw-bg-opacity: 1;
+background-color: rgb(199 210 254 / var(--tw-bg-opacity));
+}
+.hover\:bg-indigo-300:hover{
+--tw-bg-opacity: 1;
+background-color: rgb(165 180 252 / var(--tw-bg-opacity));
+}
+.hover\:bg-indigo-300\/80:hover{
+background-color: rgb(165 180 252 / 0.8);
+}
 .hover\:bg-opacity-50:hover{
 --tw-bg-opacity: 0.5;
 }
@@ -7182,9 +7239,21 @@ display: flex;
 .group:hover .group-hover\:hidden{
 display: none;
 }
+.group:hover .group-hover\:bg-indigo-300\/80{
+background-color: rgb(165 180 252 / 0.8);
+}
+.group:hover .group-hover\:bg-indigo-400\/80{
+background-color: rgb(129 140 248 / 0.8);
+}
 .group:hover .group-hover\:text-white{
 --tw-text-opacity: 1;
 color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.group:hover .group-hover\:text-indigo-400\/80{
+color: rgb(129 140 248 / 0.8);
+}
+.group:hover .group-hover\:text-indigo-400\/50{
+color: rgb(129 140 248 / 0.5);
 }
 .peer:checked ~ .peer-checked\:bg-slate-600\/80{
 background-color: rgb(56 73 110 / 0.8);
@@ -7482,6 +7551,12 @@ background-color: rgb(31 44 72 / 0.8);
 --tw-bg-opacity: 1;
 background-color: rgb(31 44 72 / var(--tw-bg-opacity));
 }
+.dark .hover\:dark\:bg-indigo-500\/30:hover{
+background-color: rgb(99 102 241 / 0.3);
+}
+.dark .hover\:dark\:bg-indigo-500\/40:hover{
+background-color: rgb(99 102 241 / 0.4);
+}
 .dark .dark\:hover\:text-slate-300:hover{
 --tw-text-opacity: 1;
 color: rgb(203 213 225 / var(--tw-text-opacity));
@@ -7582,6 +7657,18 @@ margin-bottom: 1.5rem;
 .sm\:mt-4{
 margin-top: 1rem;
 }
+.sm\:ml-5{
+margin-left: 1.25rem;
+}
+.sm\:ml-7{
+margin-left: 1.75rem;
+}
+.sm\:ml-6{
+margin-left: 1.5rem;
+}
+.sm\:ml-10{
+margin-left: 2.5rem;
+}
 .sm\:block{
 display: block;
 }
@@ -7668,11 +7755,26 @@ grid-template-columns: repeat(5, minmax(0, 1fr));
 .sm\:grid-cols-4{
 grid-template-columns: repeat(4, minmax(0, 1fr));
 }
+.sm\:grid-cols-8{
+grid-template-columns: repeat(8, minmax(0, 1fr));
+}
+.sm\:grid-cols-9{
+grid-template-columns: repeat(9, minmax(0, 1fr));
+}
+.sm\:grid-cols-7{
+grid-template-columns: repeat(7, minmax(0, 1fr));
+}
+.sm\:grid-cols-10{
+grid-template-columns: repeat(10, minmax(0, 1fr));
+}
 .sm\:items-start{
 align-items: flex-start;
 }
 .sm\:justify-end{
 justify-content: flex-end;
+}
+.sm\:justify-between{
+justify-content: space-between;
 }
 .sm\:gap-6{
 gap: 1.5rem;
