--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;700;900&display=swap');
+/* @import 'fonts'; */
 @import 'icons';
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
